<resources>
    <string name="app_name">Memorize</string>
    <string name="todo">TODO</string>
    <string name="delete">删除</string>
    <string name="add_subject">新建科目</string>
    <string name="add_problem_set">新建习题集</string>
    <string name="add_problem">新建习题</string>
    <string name="rename">改名</string>
    <string name="new_name">新名字</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="home">主页</string>
    <string name="add_knowledge">新建知识点</string>
    <string name="select_knowledge">从知识点树中选择知识点</string>
    <string name="select_picture">从相簿或相机中添加照片</string>
    <string name="related_problems">涉及到的题目</string>
    <string name="startDate">开始日期</string>
    <string name="endDate">截止日期</string>
    <string name="divider">~</string>
    <string name="useNotice">没有查到任何记录\n请更改筛选条件\n或者持续记录一段时间</string>
    <string name="chooseAll">全选</string>
    <string name="chooseNone">全不选</string>
    <string name="chooseOther">反选</string>

</resources>
