<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="5dp">
        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/choose_all"
            style="@style/RoundButton.Auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/picture_color_white"
            app:rb_backgroundColor="@color/dark_green"
            app:rb_borderWidth="0dp"
            app:rb_radius="15dp"
            android:text="@string/chooseAll"/>
        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/choose_none"
            style="@style/RoundButton.Auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/picture_color_white"
            app:rb_backgroundColor="@color/_777"
            app:rb_borderWidth="0dp"
            app:rb_radius="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/chooseNone"/>
        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/choose_other"
            style="@style/RoundButton.Auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/picture_color_white"
            app:rb_backgroundColor="@color/moody"
            app:rb_borderWidth="0dp"
            app:rb_radius="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/chooseOther"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/subject_items"
        android:layout_height="match_parent"
        android:overScrollMode="never"/>
</LinearLayout>